--- a/css/style.css
+++ b/css/style.css
@@ -8387,8 +8387,8 @@ h1, h2, h3, h4, h5,
         margin-left: 0 !important; } }
     .ftco-navbar-light.scrolled .navbar-toggler {
       border: none;
-      color: rgba(0, 0, 0, 0.5) !important;
-      border-color: rgba(0, 0, 0, 0.5) !important;
+      color: #fff;
+      border-color:#fff;
       cursor: pointer;
       text-transform: uppercase;
       font-size: 16px;
